// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`C renders b again 1`] = `
<B
  someprop={6}
>
  <div
    className="bContain"
    someprop={6}
  >
    <A
      label="test"
    >
      <div
        className="aContain"
      >
        test
      </div>
    </A>
  </div>
</B>
`;

exports[`C renders c 1`] = `
<C
  someprop={6}
>
  <div
    className="cContain"
  >
    <B
      testprop={57}
    >
      <div
        className="bContain"
        testprop={57}
      >
        <A
          label="test"
        >
          <div
            className="aContain"
          >
            test
          </div>
        </A>
      </div>
    </B>
  </div>
</C>
`;
